.ros/log/7795fed8-9f8d-11ec-9ff8-7c507959f385/gripper_action_server-3.log
[rospy.client][INFO] 2022-03-09 09:44:10,281: init_node, name[/gripper_action_server], pid[3327]
[xmlrpc][INFO] 2022-03-09 09:44:10,281: XML-RPC server binding to 0.0.0.0:0
[xmlrpc][INFO] 2022-03-09 09:44:10,282: Started XML-RPC server [http://FM00351-u:46013/]
[rospy.init][INFO] 2022-03-09 09:44:10,282: ROS Slave URI: [http://FM00351-u:46013/]
[rospy.impl.masterslave][INFO] 2022-03-09 09:44:10,282: _ready: http://FM00351-u:46013/
[rospy.registration][INFO] 2022-03-09 09:44:10,282: Registering with master node http://localhost:11311
[xmlrpc][INFO] 2022-03-09 09:44:10,282: xml rpc node: starting XML-RPC server
[rospy.init][INFO] 2022-03-09 09:44:10,382: registered with master
[rospy.rosout][INFO] 2022-03-09 09:44:10,382: initializing /rosout core topic
[rospy.rosout][INFO] 2022-03-09 09:44:10,384: connected to core topic /rosout
[rospy.simtime][INFO] 2022-03-09 09:44:10,384: /use_sim_time is not set, will not subscribe to simulated time [/clock] topic
[rospy.internal][INFO] 2022-03-09 09:44:10,603: topic[/rosout] adding connection to [/rosout], count 0
[rospy.internal][INFO] 2022-03-09 09:58:43,002: topic[/gripper_action_server/feedback] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-03-09 09:58:43,002: topic[/gripper_action_server/result] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-03-09 09:58:43,002: topic[/gripper_action_server/status] adding connection to [/gripper_action_client], count 0
[rospy.internal][INFO] 2022-03-09 09:58:43,078: topic[/gripper_action_server/cancel] adding connection to [http://FM00351-u:35581/], count 0
[rospy.internal][INFO] 2022-03-09 09:58:43,078: topic[/gripper_action_server/goal] adding connection to [http://FM00351-u:35581/], count 0
[rosout][INFO] 2022-03-09 09:58:43,108: state: initializing
[rosout][INFO] 2022-03-09 09:58:43,108: controller is started now
[rospy.internal][INFO] 2022-03-09 09:58:43,219: topic[/Robotiq2FGripperRobotOutput] adding connection to [/Robotiq2FGripperRtuNode], count 0
[rospy.internal][ERROR] 2022-03-09 10:09:02,605: Unable to initiate TCP/IP socket to FM00351-u:44797 (http://FM00351-u:35581/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 562, in connect
    self.read_header()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 657, in read_header
    self._validate_header(read_ros_handshake_header(sock, self.read_buff, self.protocol.buff_size))
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 600, in _validate_header
    raise TransportInitError("remote error reported: %s"%header['error'])
TransportInitError: remote error reported: node shutting down

[rospy.internal][ERROR] 2022-03-09 10:09:02,605: Unable to initiate TCP/IP socket to FM00351-u:44797 (http://FM00351-u:35581/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 562, in connect
    self.read_header()
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 657, in read_header
    self._validate_header(read_ros_handshake_header(sock, self.read_buff, self.protocol.buff_size))
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 600, in _validate_header
    raise TransportInitError("remote error reported: %s"%header['error'])
TransportInitError: remote error reported: node shutting down

[rospy.internal][INFO] 2022-03-09 10:09:02,605: topic[/gripper_action_server/feedback] adding connection to [/gripper_action_client], count 1
[rospy.internal][INFO] 2022-03-09 10:09:02,605: topic[/gripper_action_server/feedback] removing connection to /gripper_action_client
[rosout][WARNING] 2022-03-09 10:09:02,787: Inbound TCP/IP connection failed: connection from sender terminated before handshake header received. 0 bytes were received. Please check sender for additional details.
[rospy.internal][ERROR] 2022-03-09 10:09:02,788: Inbound TCP/IP connection failed:
Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 325, in _tcp_server_callback
    header = read_ros_handshake_header(sock, StringIO(), buff_size)
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rosgraph/network.py", line 359, in read_ros_handshake_header
    raise ROSHandshakeException("connection from sender terminated before handshake header received. %s bytes were received. Please check sender for additional details."%b.tell())
ROSHandshakeException: connection from sender terminated before handshake header received. 0 bytes were received. Please check sender for additional details.

[rospy.internal][INFO] 2022-03-09 10:09:02,795: topic[/gripper_action_server/feedback] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-03-09 10:09:02,795: topic[/gripper_action_server/status] removing connection to /gripper_action_client
[rospy.internal][INFO] 2022-03-09 10:09:02,795: topic[/gripper_action_server/result] removing connection to /gripper_action_client
[rospy.internal][WARNING] 2022-03-09 10:09:03,607: Unknown error initiating TCP/IP socket to FM00351-u:44797 (http://FM00351-u:35581/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 560, in connect
    self.socket.connect((dest_addr, dest_port))
  File "/usr/lib/python2.7/socket.py", line 228, in meth
    return getattr(self._sock,name)(*args)
error: [Errno 111] Connection refused

[rospy.internal][WARNING] 2022-03-09 10:09:03,607: Unknown error initiating TCP/IP socket to FM00351-u:44797 (http://FM00351-u:35581/): Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/rospy/impl/tcpros_base.py", line 560, in connect
    self.socket.connect((dest_addr, dest_port))
  File "/usr/lib/python2.7/socket.py", line 228, in meth
    return getattr(self._sock,name)(*args)
error: [Errno 111] Connection refused

[rospy.internal][INFO] 2022-03-09 10:09:03,607: topic[/gripper_action_server/goal] removing connection to http://FM00351-u:35581/
[rospy.internal][INFO] 2022-03-09 10:09:03,607: topic[/gripper_action_server/cancel] removing connection to http://FM00351-u:35581/
[rospy.core][INFO] 2022-03-09 10:09:05,682: signal_shutdown [signal-2]
[rospy.internal][INFO] 2022-03-09 10:09:05,686: topic[/rosout] removing connection to /rosout
[rospy.internal][INFO] 2022-03-09 10:09:05,687: topic[/Robotiq2FGripperRobotOutput] removing connection to /Robotiq2FGripperRtuNode
[rospy.impl.masterslave][INFO] 2022-03-09 10:09:05,687: signal-2
[rosout][ERROR] 2022-03-09 10:09:07,300: Exception in your execute callback: unexpected EOF while parsing (<string>, line 0)
Traceback (most recent call last):
  File "/opt/ros/melodic/lib/python2.7/dist-packages/actionlib/simple_action_server.py", line 289, in executeLoop
    self.execute_callback(goal)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/gripper_action_server.py", line 38, in execute
    command = 'cal'
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 798, in controller
    inputs = self.askForInput(self.command)
  File "/home/ros/catkin_ws/src/fm_gripper_module/src/Robotiq2FGripperSlipController.py", line 771, in askForInput
    return input(strAskForCommand)
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing

[rospy.core][INFO] 2022-03-09 10:09:07,403: signal_shutdown [atexit]
